--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,36 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Server Information</title>
-	<style>
-       table {
-           width: 100%;
-           border-collapse: collapse;
-       }
-       table, th, td {
-           border: 1px solid black;
-       }
-       th, td {
-           padding: 8px;
-           text-align: left;
-       }
-       th {
-           background-color: #f2f2f2;
-       }
-       #diskInfo {
-           position: fixed;
-           bottom: 0;
-           width: 100%;
-           height: 20%;
-           background-color: #f9f9f9;
-           border-top: 1px solid #ccc;
-           padding: 10px;
-           box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-           overflow-y: auto;
-       }
-       #diskInfo h2 {
-           margin-top: 0;
-       }
-	</style>
+	<link rel="stylesheet" th:href="@{/css/dashboard.css}">
+	<script th:inline="javascript">
+     const diskList = /*[[${diskList}]]*/ [];
+	</script>
+	<script th:src="@{/js/dashboard.js}" defer></script>
 </head>
 <body>
 	<h1>Server Information List</h1>
@@ -49,7 +24,7 @@
 		</thead>
 		<tbody>
 		<tr th:each="serverInfo : ${serverInfoList}"
-		    th:onclick="|fetchDiskInfo(${serverInfo.serverId})|">
+		    th:onclick="|handleRowClick(${serverInfo.serverId})|">
 			<td th:text="${serverInfo.serverId}">Server ID</td>
 			<td th:text="${serverInfo.serverOs}">OS</td>
 			<td th:text="${serverInfo.serverHostname}">Hostname</td>
@@ -59,28 +34,19 @@
 		</tr>
 		</tbody>
 	</table>
-	<div>
+
+	<div id="diskInfoContainer">
 		<div id="diskInfo">
 			<h2>Disk Information</h2>
 			<div id="diskContent">선택된 디스크 없음.</div>
 		</div>
+		<div class="button-container">
+
+		</div>
 	</div>
 
 
-	<script th:inline="javascript">
 
-	  const diskList = [[${diskList}]];
-     function fetchDiskInfo(serverId) {
-       const diskInfo = diskList.find(disk => disk.diskId === serverId);
-       if (diskInfo != undefined) {
-         const content = '<p>Disk ID: ' + diskInfo.diskId + '</p>'
-            + '<p>Total: ' + diskInfo.diskTotal + '</p>';
-         // + '<p>Used: ' + diskInfo.used + '</p>';
-         document.getElementById('diskContent').innerHTML = content;
-       } else {
-         document.getElementById('diskContent').innerHTML = '이용 가능한 디스크 없음.';
-       }
-     }
-	</script>
+
 </body>
 </html>
