--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,38 +1,210 @@
-table {
-    width: 100%;
-    border-collapse: collapse;
+#container {
+    display: grid;
+    grid-template-rows: 7% 40% 500px; /* header, serverTableBody, diskInfoContainer 순서로 높이 설정 */
+    grid-template-columns: 100%; /* 모든 div가 전체 너비를 차지하도록 설정 */
+    height: 100vh; /* 화면 전체 높이 */
+    width: 100vw; /* 화면 전체 너비 */
+    gap: 0.7rem; /* 각 영역 사이에 약간의 간격 추가 */
+    padding: 0.8rem; /* 컨테이너 가장자리 여백 추가 */
+    box-sizing: border-box; /* padding이 총 크기에 포함되도록 설정 */
 }
-table, th, td {
-    border: 1px solid black;
-}
-th, td {
-    padding: 8px;
-    text-align: left;
-}
-th {
-    background-color: #f2f2f2;
-}
-#diskInfoContainer {
+
+/* 헤더 스타일 */
+#header {
     display: flex;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 20%;
-    background-color: #f9f9f9;
-    border-top: 1px solid #ccc;
-    padding: 10px;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-    overflow-y: auto;
+    justify-content: space-between; /* 제목과 버튼 사이의 공간을 동일하게 분배 */
+    align-items: center; /* 세로 중앙 정렬 */
+    padding: 0.3rem 0.7rem; /* 좌우 여백 추가 */
+    background-color: rgb(247, 247, 247); /* 배경색 설정 */
+    border: 1px solid #dee2e6;
+    border-radius: 10px 10px 10px 10px;
 }
-#diskInfo {
-    flex: 6; /* 60% */
+#header > h1{
+    margin: 0 50px 0 0;
 }
-.button-container {
-    flex: 4; /* 40% */
+
+/* 헤더 (CPU, Memory, Disk color div) */
+#header-info {
+    display: flex;
+    gap: 1rem; /* 정보 사이의 간격 */
+    margin-right: auto; /* 가능한 공간을 왼쪽에 붙이기 위해 설정 */
+}
+
+#header-info > div {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0.3rem 0.8rem;
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 0.25rem;
+    font-size: 1rem;
 }
-#diskInfo h2 {
-    margin-top: 0;
+
+#cpuUsage {
+    background-color: rgba(75, 192, 192, 0.9); /* 진한 연한 파란색 */
+}
+
+#memoryUsage {
+    background-color: rgba(153, 102, 255, .9); /* 진한 연한 초록색 */
+}
+
+#diskUsage {
+    background-color: rgba(54, 162, 235, 1); /* 진한 연한 노란색 */
+}
+
+/* 서버 테이블 본문 스타일 */
+#serverTableBody {
+    display: grid;
+    grid-template-columns: repeat(7, minmax(210px, auto)); /* 한 줄에 7개의 div */
+    grid-template-rows: repeat(auto-fit, minmax(150px, 165px));
+    gap: 8px; /* 각 div 사이에 간격 */
+    padding: 0.5rem; /* 내부 여백 추가 */
+    max-height: 100%; /* 화면 높이의 70%만큼 최대 높이 설정 */
+    overflow-y: auto; /* 세로 스크롤 가능하게 설정 */
+    border: 1px solid #dee2e6; /* 테두리 추가 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 약간의 그림자 효과 */
+}
+
+/* 컨테이너 스타일 */
+#etcInfoContainer {
+    height: 80%;
+    display: flex;
+    flex-direction: column; /* 세로 방향으로 배치 */
+    padding: 0.5rem 0.5rem; /* 내부 여백 추가 */
+    background-color: #ffffff; /* 배경색 설정 */
+    border-top: 1px solid #dee2e6; /* 상단 테두리 추가 */
+}
+
+
+/* 디스크 정보 스타일 */
+#etcInfo {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 30% 70%;
+}
+#infoContainer{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 60px 1fr 1fr 1fr;
+    border-right: 1px solid;
+    margin-bottom: 9px;
+}
+#infoContainer > h2{
+    margin : 0;
+    line-height: 60px;
+}
+
+#infoFirst, #infoSec, #infoThird{
+    line-height: 42px;
+}
+
+#infoFirst, #infoSec{
+    border-bottom: 1px solid black;
+    margin-right: 20px;
+}
+
+#infoFirst{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    text-align: center;
+    grid-row: 2/3;
+
+}
+
+#infoSec{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    text-align: center;
+    grid-row: 3/4;
+}
+
+#infoThird{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    text-align: center;
+    grid-row: 4/5;
+}
+
+
+#diskInfo{
+    display: grid;
+    grid-template-rows: 20% 80%;
+    padding: 3px 10px;
+}
+
+#diskContent{
+    padding: 0 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+#disks{
+    text-align: center;
+    margin : 0
+}
+
+#disks > h4{
+    margin: 0;
+}
+
+
+/* 버튼 스타일 */
+.btn {
+    margin-left: 1rem; /* 버튼 사이의 여백 추가 */
+    padding: 2px 5px; /* 버튼 패딩 */
+    border: none;
+    color: #ffffff;
+    background-color: #007bff;
+    border-radius: 0.25rem; /* 둥근 모서리 */
+    cursor: pointer;
+    font-size: 1rem;
+    margin-bottom: 5px;
+}
+
+.btn:hover {
+    background-color: #0056b3; /* 버튼 호버 색상 변경 */
+}
+
+#regModal{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 1px solid black;
+    z-index: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 300px; /* 원하는 크기로 설정 */
+    height: 300px;
+    text-align: center;
+}
+
+.danBtn {
+    width: 25px;
+    height: 20px;
+    position: absolute;
+    top: 4px;
+    right: 5px;
+    background-color: #f44336; /* 더 부드러운 빨간색 */
+    color: white;
+    border: none;
+    border-radius: 5px; /* 모서리를 둥글게 */
+    line-height: 14px;
+    cursor: pointer;
+    font-size: 14px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
+    transition: background-color 0.3s, box-shadow 0.3s; /* 부드러운 전환 효과 */
+}
+
+.danBtn:hover {
+    background-color: #d32f2f; /* 호버 시 색상 변경 */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* 호버 시 그림자 변화 */
+}
+
+.danBtn:active {
+    background-color: #c62828; /* 클릭 시 색상 변경 */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* 클릭 시 그림자 변경 */
 }
