날짜 변경 후 갱신시, 이전날짜 + 전날 23:55 ~ 00:05 가지고 오는 문제 수정, 서버 정보, 히스토리 메뉴, 서버 로그 작동시 polling 타이밍 동일하게

--- a/src/main/resources/templates/errPage.html
+++ b/src/main/resources/templates/errPage.html
@@ -14,7 +14,7 @@
 		<p th:text="'HTTP Status: ' + ${err.status}">HTTP Status: 404</p>
 
 		<!-- 에러 페이지에 추가적인 설명이나 행동을 안내할 수 있는 부분 -->
-		<a href="/" class="button">Go to Homepage</a>
+		<a href="/" class="button">홈페이지로</a>
 	</div>
 </body>
 </html>
