다른 서버 제거시 showHistory와 deleteServer가 동시에 눌리던 문제 해결(stopPropagation) 각 서버 선택시 해당 서버를 제외한 다른 interval정지(map이용) - histroy와 차트가 b삭제시 현재 보는 a도 정지 하는 문제와 b를 보고있다 삭제시 에러뜨는 문제때문

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@
 				<div class="buttonContainer">
 					<!-- 삭제 버튼 -->
 					<button th:id="'deleteButton-' + ${data.serverId}" class="btn btn-danger danBtn"
-					        th:onclick="|deleteServer(${data.serverId})|">X</button>
+					        th:onclick="|deleteServer(event, ${data.serverId})|">X</button>
 				</div>
 			</div>
 		</div>
